# plano-rewritten

./: README.md  com.github.diegoivanme.plano.json  meson.build  meson_options.txt  plano-rewritten.doap  vala-lint.conf
data/: com.github.diegoivanme.plano.appdata.xml.in  com.github.diegoivanme.plano.desktop.in  com.github.diegoivanme.plano.gschema.xml  meson.build
data/icons/: meson.build
data/ui/: entry.ui  meson.build  plano.gresource.xml  preferences.ui  shortcuts.ui  style.css  window.ui
plano/: Application.vala  Config.vapi  Plane.vala  Settings.vala  Units.vala  Utils.vala  main.vala  meson.build
plano/Widgets/: Entry.vala  Preferences.vala  Window.vala
po/: POTFILES  com.github.diegoivanme.plano.pot  es.po  meson.build
src/: Application.vala  Entry.vala  Plane.vala  Settings.vala  main.vala  meson.build  plano_rewritten.gresource.xml  style.css  window.ui  window.vala
src/Widgets/: Entry.vala  Window.vala  entry.ui  meson.build  plano_rewritten.gresource.xml  window.ui
